[tool.poetry]
name = "dl2-analyse-graphs"
version = "0.1.0"
description = ""
authors = ["Amity Aharoni <aharoni.amittai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"
jupyter = "^1.0.0"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
